--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -37,5 +37,6 @@
   <script src="/js/search.js"></script>
   <script src="/js/ug-theme-default.js"></script>
   <script src="/js/unitegallery.js"></script>
-  <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+  <script src="/js/av.min.js"></script>
+  <script src="/js/valine.min.js"></script>
 </head>
