--- a/layout/_partial/resume.ejs
+++ b/layout/_partial/resume.ejs
@@ -4,7 +4,7 @@
             <h3></h3>
             <div>
                 <h2 style="margin-top:10px;">About Me</h2>
-                <label>姓名:L.Tao</label>
+                <label>姓名:梁涛</label>
                 <label>出生日期:1991/02/27</label>
                 <label style="margin-right:20px">电话:188832519XX</label>
                 </br>
@@ -23,7 +23,7 @@
                 </br>
                 <label>成长中的全栈开发者,什么都会,什么也不会.</label>
                 </br>
-                <label>宅,业余生活逃不开写代码,听音乐,看动漫,打Dota.</label>
+                <label>目前作为技术经理,日常打打杂....</label>
             </div>
 
         </li>
