--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -166,7 +166,7 @@
       content: "";
       width: 6px;
       height: 6px;
-      border: 1px solid #999;
+      /*border: 1px solid #999;*/
       border-radius: 10px;
       background: #aaa;
       display: inline-block;
