--- a/layout/_partial/post/valine.ejs
+++ b/layout/_partial/post/valine.ejs
@@ -1,10 +1,14 @@
 <div id="vcomments" style="margin: auto 30px auto 30px;"></div>
 <script>
     new Valine({
+        av: AV,
         el: '#vcomments',
         appId: 'lxxWlIzQxwQ6sYeozabbQN2e-gzGzoHsz',
         appKey: 'PQ3KTORxjUaJf9oRo5dfXmUr',
         placeholder: '快来说点什么吧!',
-        notify: true
+        emoticon_url: 'https://cloud.panjunwen.com/alu',
+        emoticon_list: ["狂汗.png","不说话.png","汗.png","坐等.png","献花.png","不高兴.png","中刀.png","害羞.png","皱眉.png","小眼睛.png","暗地观察.png"],
+        notify: false,
+        verify: false
     })
 </script>
