--- a/source/css/_partial/toc.styl
+++ b/source/css/_partial/toc.styl
@@ -2,13 +2,13 @@
         position:fixed;
         top:40%;
         right:10px;
-        border-top-left-radius: 50%;
-        border-bottom-left-radius: 50%;
+        border-top-left-radius: 2px;
+        border-bottom-left-radius: 2px;
         height: 26px;
-        background-color:#2ec7e3;
+        background-color:#555555;
         width: 26px;
         text-align:right;
-        padding-right:4px;
+        padding-right:2px;
         line-height:26px;
         color:#ffffff;
         font-size:10px;
@@ -26,7 +26,7 @@
         right:60px;
         width:100px;
 		font-size:14px;
-		color:#000000;
+		color:#eeeeee;
 
     }
     .toc-article .toc-title {
