--- a/source/css/_partial/search.styl
+++ b/source/css/_partial/search.styl
@@ -15,6 +15,8 @@
   font-size: 12px;
 }
 
+.local-search-input-cls:focus { outline: none; } 
+
 #local-search-close {
   content: 'x';
   position: absolute;
