--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="baidu-site-verification" content="6fea7fc7276fc383ec5b2080c662f076"/>
+  <!--
 <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+  -->
   <%
   var title = page.title;
 
@@ -31,9 +33,9 @@
     <link rel="icon" href="<%- theme.favicon %>">
   <% } %>
   <%- css('css/style') %>
-  <script src="http://kiritor.github.io/js/jquery1.8.2.min.js"></script>
-  <script src="http://kiritor.github.io/js/jquery.nicescroll.js"></script>
-  <script src="http://kiritor.github.io/js/jquery.qrcode.min.js"></script>
+  <script src="https://upcdn.b0.upaiyun.com/libs/jquery/jquery-1.8.1.min.js"></script>
+  <script src="https://cdn.staticfile.org/jquery.nicescroll/3.7.6/jquery.nicescroll.min.js"></script>
+  <script src="https://cdn.staticfile.org/jquery.qrcode/1.0/jquery.qrcode.min.js"></script>
   <script src="/js/search.js"></script>
   <script src="/js/ug-theme-default.js"></script>
   <script src="/js/unitegallery.js"></script>
