--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -47,12 +47,14 @@
             <%- post.excerpt %>
             <% } else { %>
             <%- post.content %>
+            <% if (post.layout !== "false"){ %>
             </br>
             <p>本文链接：
                 <a href="<%- post.permalink  %>">
                     <%- post.permalink %>
                 </a>
             </p>
+            <% } %>
             <p>-- <acronym title="End of File">EOF</acronym> --</p>
 
             <div class="post-info">
